<resources>
    <string name="app_name">Popular Movies</string>

    <!--menu strings-->
    <string name="sort_order">Sort Order</string>
    <string name="pref_sort_title">Sort By</string>
    <string name="pref_sort_key">Sort</string>
    <string name="pref_sort_default">Most Popular</string>

    <string name="favorites">Favorite</string>



    <!-- Array Option/Values -->
    <string name="pref_sort_most_popular">Most Popular</string>
    <string name="pref_sort_highest_rated">Highest Rated</string>

    <!-- Activity Names-->
    <string name="settings_Activity">Settings</string>
    <string name="movies_detail_activity">Movie Detail</string>
    <string name="favorites_activity">Favorites</string>

    <!-- Movie Detail Fragment Layout -->
    <string name="release_date_tag">Release Date:</string>
    <string name="runtime_tag">Runtime:</string>
    <string name="rating_tag">Rating:</string>
    <string name="description_tag">Description:</string>
    <string name="rating_units">/10</string>
    <string name="launch_trailer">Launch Trailer</string>

    <!-- Toast Messages -->
    <string name="add_to_favorites_msg">added to favorites</string>
    <string name="delete_from_favorites_msg">removed from favorites</string>

    <!-- Favorites List-->
    <string name="favorites_rating_tag">Rating: </string>
    <string name="favorites_release_tag">Released: </string>

    <!-- map tags-->
    <string name="allData">allData</string>
    <string name="map">map</string>

</resources>
